# cpputils

./: .gitignore  CMakeLists.txt  testbench.cpp
include/cpputils/: concepts.hpp  ensure.hpp  unreachable.hpp
include/cpputils-IMPL/collections/: DereferenceIterable.tpp  DereferenceIterator.tpp  Dereferencer.tpp  Event.tpp  Iterable.tpp  Iterator.tpp  Namer.tpp  SetNamer.tpp  algorithms.tpp  conversions.tpp  index.tpp  map.tpp  types.tpp  zip.tpp
include/cpputils-IMPL/mixins/: ReferenceEquatableWith.tpp
include/cpputils-IMPL/serialization/: Deserializer.tpp  DeserializerWorker.tpp  Serializer.tpp  SerializerWorker.tpp  StringDeserializer.tpp  StringSerializer.tpp
include/cpputils/collections/: DereferenceIterable.hpp  DereferenceIterator.hpp  Dereferencer.hpp  Event.hpp  FixedVector.hpp  Iterable.hpp  Iterator.hpp  Namer.hpp  PublicEvent.hpp  Range.hpp  SetNamer.hpp  algorithms.hpp  conversions.hpp  index.hpp  map.hpp  types.hpp  zip.hpp
include/cpputils/iterators/: FilterIterator.hpp  IndexIterator.hpp  JoinIterator.hpp  LinkedIndexIterator.hpp  MapIterator.hpp  ReverseIterator.hpp  StandaloneIndexIterator.hpp  ZipIterator.hpp
include/cpputils/macros/: map.hpp
include/cpputils/mixins/: NonCopyable.hpp  NonMovable.hpp  ReferenceClass.hpp  ReferenceEquatable.hpp  ReferenceEquatableWith.hpp  StaticClass.hpp  WithVirtualDestructor.hpp
include/cpputils/range/: Range.hpp  RangeMaker.hpp  RangeSizer.hpp  Ranged.hpp  enumerate.hpp  index.hpp  join.hpp  makeRange.hpp  of.hpp  repeat.hpp  sizeHint.hpp  zip.hpp
include/cpputils/serialization/: Deserializer.hpp  (+5 more)
(+15 files in other folders)
